// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackgroundImage /> should call critical fixed images 1`] = `
<div>
  <div
    class="imageClass gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline-block; width: 100px; height: 100px; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass:before,
.gatsby-background-image-test:before,
          .imageClass:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: none;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass:before,
.gatsby-background-image-test:before {
            z-index: -100;
            background-image: url(http://localhost/test_fixed_image.jpg);
            
            opacity: 1; 
          }
          .imageClass:after,
.gatsby-background-image-test:after {
            z-index: -101;
            
            background-image: url(string_of_base64);
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" /&gt;&lt;img width="100" height="100" srcset="some srcSet" src="test_fixed_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should call critical fluid images 1`] = `
<div>
  <div
    class="imageClass gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass:before,
.gatsby-background-image-test:before,
          .imageClass:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .imageClass:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test_fluid_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should change style.display from 'inherit' to 'inline-block' 1`] = `
<div>
  <div
    class=" gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; width: 100px; height: 100px; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title=""
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" /&gt;&lt;img width="100" height="100" srcset="some srcSet" src="test_fixed_image.jpg" alt="" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      testempty
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should create style tag at fixed with pseudo-elements 1`] = `
<style>
  
          .imageClass.test:before,
.gatsby-background-image-test:before,
          .imageClass.test:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass.test:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .imageClass.test:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
</style>
`;

exports[`<BackgroundImage /> should create style tag with pseudo-elements 1`] = `
<style>
  
          .imageClass.test:before,
.gatsby-background-image-test:before,
          .imageClass.test:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass.test:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .imageClass.test:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
</style>
`;

exports[`<BackgroundImage /> should render fixed size images 1`] = `
<div>
  <div
    class="imageClass gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline-block; width: 100px; height: 100px; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title="Title for the image"
  >
    <style>
      
          .imageClass:before,
.gatsby-background-image-test:before,
          .imageClass:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .imageClass:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .imageClass:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" /&gt;&lt;img width="100" height="100" srcset="some srcSet" src="test_fixed_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should render fluid images 1`] = `
<div>
  <div
    class="imageClass gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass:before,
.gatsby-background-image-test:before,
          .imageClass:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .imageClass:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test_fluid_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should render fluid images 2`] = `
<div>
  <div
    class="imageClass gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass:before,
.gatsby-background-image-test:before,
          .imageClass:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .imageClass:after,
.gatsby-background-image-test:after {
            z-index: -101;
            
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test_fluid_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should render stacked fixed size images 1`] = `
<div>
  <div
    class="imageClass gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline-block; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title="Title for the image"
  >
    <style>
      
          .imageClass:before,
.gatsby-background-image-test:before,
          .imageClass:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .imageClass:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .imageClass:after,
.gatsby-background-image-test:after {
            z-index: -101;
            
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" /&gt;&lt;img width="100" height="100" srcset="some srcSet" src="test_fixed_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should return null without fluid / fixed 1`] = `<div />`;

exports[`<BackgroundImage /> should work with BackgroundColor 1`] = `
<div>
  <div
    class=" gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title="Title for the image"
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: #fff;
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test_fluid_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work with another external class 1`] = `
<div>
  <div
    class="imageClass test gatsby-background-image-test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass.test:before,
.gatsby-background-image-test:before,
          .imageClass.test:after,
.gatsby-background-image-test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass.test:before,
.gatsby-background-image-test:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .imageClass.test:after,
.gatsby-background-image-test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test_fluid_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work with fadeIn 1`] = `
<div>
  <div
    class=" gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title="Title for the image"
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            background-color: lightgray;
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test_fluid_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work with only classId 1`] = `
<div>
  <div
    class=" gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title="Title for the image"
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test_fluid_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work without classId but className 1`] = `
<div>
  <div
    class="imageClass test gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; display: inline; background-size: 'contain';"
    title="Title for the image"
  >
    <style>
      
          .imageClass.test:before,
          .imageClass.test:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: 'center';
background-repeat: 'repeat-y';
background-size: 'contain';

          }
          .imageClass.test:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .imageClass.test:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test_fluid_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      test
    </h1>
  </div>
</div>
`;

exports[`<BackgroundImage /> should work without external class 1`] = `
<div>
  <div
    class=" gatsby-background-image-fwatluf_depr gatsby-image-wrapper"
    style="position: relative; overflow: hidden; opacity: 0.99; background-position: center; background-repeat: no-repeat; background-size: cover;"
    title=""
  >
    <style>
      
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
          }
        
    </style>
    <noscript>
      &lt;picture&gt;&lt;source type='image/webp' srcset="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img sizes="(max-width: 600px) 100vw, 600px" srcset="some srcSet" src="test_fluid_image.jpg" alt="" style="position:absolute;top:0;left:0;z-index:-1;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
    </noscript>
    <h1>
      testempty
    </h1>
  </div>
</div>
`;
